botones cambio de color

--- a/index.html
+++ b/index.html
@@ -9,9 +9,18 @@
     <link rel="shortcut icon" href="img/logo.PNG">
 </head>
 <body>
-    <div>
-        <div></div>
-        <div></div>        
+    <div class="main">
+        <div class="puntuaje"></div>
+        <div class="juego">
+            <div class="gif"></div>
+            <div class="game">
+                <div class="botn" id="left"></div>
+                <div class="botn" id="up"></div>
+                <div class="botn" id="down"></div>
+                <div class="botn" id="right"></div>
+            </div>
+            <div class="gif"></div>
+        </div>        
     </div>
 <script src="js/index.js"></script>
 </body>
