--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="puntuaje"></div>
         <div class="juego">
             <div class="gif"></div>
-            <div class="game">
+            <div class="game" id="guitarra">
                 <div class="botn" id="left"></div>
                 <div class="botn" id="up"></div>
                 <div class="botn" id="down"></div>
