--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <div class="main">
-        <div class="puntuaje"></div>
+        <div class="puntuaje">
+            <div id="score">0</div>
+            <div id="life">5</div>
+        </div>
         <div class="juego">
             <div class="gif"></div>
             <div class="game" id="guitarra">
