--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         <div class="puntuaje">
             <div id="score">0</div>
             <div id="life">5</div>
+            <div id="combo">0</div>
+            <div id="level">
+                <button id="startgame">Start Game</button>
+            </div>
+            
         </div>
         <div class="juego">
             <div class="gif"></div>
