Actualizacion de estilos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,16 +9,22 @@
     <title>Guitar Hero</title>
     <link rel="shortcut icon" href="img/logo.PNG">
 </head>
+
 <body>
     <div class="main">
-        <div class="puntuaje">
-            <div id="score">0</div>
-            <div id="life">5</div>
-            <div id="combo">0</div>
-            <div id="level">
-                <button id="startgame">Start Game</button>
+        <div class="menu">
+            <div class="border"></div>
+            <div class="puntuaje">
+                <div id="score">0</div>
+                <div id="combo">0</div>
+                <div id="life">5</div>
+                <div id="level">
+                    <button id="startgame">Start Game</button>
+                </div>
             </div>
-            
+            <div class="border"></div>
+            <div class="border2"></div>
+            <div class="border3"></div>
         </div>
         <div class="juego">
             <div class="gif"></div>
@@ -28,8 +35,9 @@
                 <div class="botn" id="right"></div>
             </div>
             <div class="gif"></div>
-        </div>        
+        </div>
     </div>
-<script src="js/index.js"></script>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
