--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="border"></div>
             <div class="puntuaje">
                 <div id="score">0</div>
-                <div id="combo">0</div>
+                <div id="combox">x<span id="combo">0</span></div>
                 <div id="life">5</div>
                 <div id="level">
                     <button id="startgame">Start Game</button>
