Actualizacion de estilos v3

--- a/index.html
+++ b/index.html
@@ -18,15 +18,18 @@
                 <div id="score">0</div>
                 <div id="combox">x<span id="combo">0</span></div>
                 <div id="life">5</div>
-                <div id="level">
-                    <button id="startgame">Start Game</button>
-                </div>
+                
             </div>
             <div class="border"></div>
             <div class="border2"></div>
             <div class="border3"></div>
         </div>
         <div class="juego">
+            <div class="start">
+                <div id="level">
+                    <button id="start">Start game</button> 
+                </div>
+            </div>
             <div class="gif"></div>
             <div class="game" id="guitarra">
                 <div class="botn" id="left"></div>
