Actualizacion de estilos v3.1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="border3"></div>
         </div>
         <div class="juego">
-            <div class="start">
+            <div class="menustart">
                 <div id="level">
                     <button id="start">Start game</button> 
                 </div>
