Actualizacion de estilos v4

--- a/index.html
+++ b/index.html
@@ -30,6 +30,20 @@
                     <button id="start">Start game</button> 
                 </div>
             </div>
+            <div class="windowGameover">
+                <div class="maxpoint">&nbspPOINTS:&nbsp<span id="maxp">0</span></div>
+                <div class="maxcombo">&nbspCOMBOS:&nbsp<span id="maxc">0</span></div>
+                <div id="level2">
+                    <button class="tittle">back to tittle</button> 
+                </div>
+            </div>
+            <div class="windowGamewin">
+                <div class="maxpoint">&nbspPOINTS:&nbsp<span id="maxp">0</span></div>
+                <div class="maxcombo">&nbspCOMBOS:&nbsp<span id="maxc">0</span></div>
+                <div id="level2">
+                    <button class="tittle">back to tittle</button> 
+                </div>
+            </div>
             <div class="gif"></div>
             <div class="game" id="guitarra">
                 <div class="botn" id="left"></div>
