Actualizacion de estilos v4.1

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
                     <button id="start">Start game</button> 
                 </div>
             </div>
-            <div class="windowGameover">
+            <div id="windowGameover">
                 <div class="maxpoint">&nbspPOINTS:&nbsp<span id="maxp">0</span></div>
                 <div class="maxcombo">&nbspCOMBOS:&nbsp<span id="maxc">0</span></div>
                 <div id="level2">
                     <button class="tittle">back to tittle</button> 
                 </div>
             </div>
-            <div class="windowGamewin">
+            <div id="windowGamewin">
                 <div class="maxpoint">&nbspPOINTS:&nbsp<span id="maxp">0</span></div>
                 <div class="maxcombo">&nbspCOMBOS:&nbsp<span id="maxc">0</span></div>
                 <div id="level2">
