MVP final version

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
                 </div>
             </div>
             <div id="windowGameover">
-                <div class="maxpoint">&nbspPOINTS:&nbsp<span id="maxp">0</span></div>
-                <div class="maxcombo">&nbspCOMBOS:&nbsp<span id="maxc">0</span></div>
+                <div class="maxpoint">&nbspPOINTS:&nbsp<span class="maxp">0</span></div>
+                <div class="maxcombo">&nbspCOMBOS:&nbsp<span class="maxc">0</span></div>
                 <div id="level2">
                     <button class="tittle">back to tittle</button> 
                 </div>
             </div>
             <div id="windowGamewin">
-                <div class="maxpoint">&nbspPOINTS:&nbsp<span id="maxp">0</span></div>
-                <div class="maxcombo">&nbspCOMBOS:&nbsp<span id="maxc">0</span></div>
+                <div class="maxpoint">&nbspPOINTS:&nbsp<span class="maxp">0</span></div>
+                <div class="maxcombo">&nbspCOMBOS:&nbsp<span class="maxc">0</span></div>
                 <div id="level2">
                     <button class="tittle">back to tittle</button> 
                 </div>
